Fix the label icon alignment issues

--- a/packages/viz-app/src/components/labels/styles.less
+++ b/packages/viz-app/src/components/labels/styles.less
@@ -304,8 +304,7 @@
 
 .point-icon-container {
     top: 0;
-    left: -50%;
-    width: 100%;
+    left: 0;
     position: absolute;
     backface-visibility: hidden;
 }
